--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,7 @@ psycopg2==2.9.11
 Werkzeug==3.1.5
 WTForms==3.2.1
 zipp>=3.19.1 # not directly required, pinned by Snyk to avoid a vulnerability
+pytest==9.0.2
+pytest-cov==7.0.0
+coverage==7.13.3
+email_validator==2.3.0
