chore: Add `tests.py` to SonarQube exclusions.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,4 +16,4 @@ sonar.organization=noahffiliation
 sonar.python.version=3.13
 sonar.python.coverage.reportPaths=coverage.xml
 
-sonar.exclusions=**/tests/**,**/init_db_sqlite.py,**/site-packages/**,**/dist-packages/**
+sonar.exclusions=**/tests/**,**/init_db_sqlite.py,**/site-packages/**,**/dist-packages/**,tests.py
