feat: Add SonarQube property for PL/SQL DDL paths.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,4 +16,6 @@ sonar.organization=noahffiliation
 sonar.python.version=3.13
 sonar.python.coverage.reportPaths=coverage.xml
 
+# Path to the Data Dictionary files (DDL) for PL/SQL analysis
+sonar.plsql.ddl.paths=db/schema.sql,db/create-db.sql
 sonar.exclusions=**/tests/**,**/init_db_sqlite.py,**/site-packages/**,**/dist-packages/**,tests.py
